--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Natalia Migallón</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&family=Merriweather:wght@300&family=Montserrat:wght@300&family=Open+Sans&display=swap"
       rel="stylesheet"
@@ -15,10 +14,8 @@
   </head>
 
   <body>
-    <div class="page">
-      <include
-        src="./partials/header.html"
-      ></include>
+    <div class="page-home">
+      <include src="./partials/header.html"></include>
       <include src="./partials/main.html"></include>
       <include src="./partials/footer.html"></include>
     </div>
