Fixed partial header

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -16,11 +16,14 @@
   <body>
     <div class="page-about">
       <include src="./partials/header.html"></include>
-      <main>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
-        numquam a expedita, sequi quisquam praesentium impedit. Quod nam omnis,
-        error doloribus soluta mollitia dolorem reiciendis non sint quaerat
-        minima eius!
+      <main class="about">
+        <h1 class="about__title">Sobre mí</h1>
+        <p class="about__text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
+          numquam a expedita, sequi quisquam praesentium impedit. Quod nam
+          omnis, error doloribus soluta mollitia dolorem reiciendis non sint
+          quaerat minima eius!
+        </p>
       </main>
       <include src="./partials/footer.html"></include>
     </div>
