--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,9 +13,9 @@
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
-  <body>
+  <body class="">
     <div class="page-home">
-      <include src="./partials/header.html"></include>
+      <h1>Natalia Migallón</h1>
       <include src="./partials/main.html"></include>
       <include src="./partials/footer.html"></include>
     </div>
