--- a/src/html/about.html
+++ b/src/html/about.html
@@ -18,12 +18,14 @@
       <include src="./partials/header.html"></include>
       <main class="about">
         <h1 class="about__title">Sobre mí</h1>
-        <p class="about__text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
-          numquam a expedita, sequi quisquam praesentium impedit. Quod nam
-          omnis, error doloribus soluta mollitia dolorem reiciendis non sint
-          quaerat minima eius!
-        </p>
+        <div class="about__line">
+          <p class="about__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
+            numquam a expedita, sequi quisquam praesentium impedit. Quod nam
+            omnis, error doloribus soluta mollitia dolorem reiciendis non sint
+            quaerat minima eius!
+          </p>
+        </div>
       </main>
       <include src="./partials/footer.html"></include>
     </div>
