--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&family=Merriweather:wght@300&family=Montserrat:wght@300&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/d31a9c1094.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
