Add background image in about section

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -17,13 +17,34 @@
     <div class="page-about">
       <include src="./partials/header.html"></include>
       <main class="about">
+        <img
+          src="./assets/images/nat-about.png"
+          alt="Foto de Natalia Migallón"
+          class="about__photo"
+        />
         <h1 class="about__title">Sobre mí</h1>
         <div class="about__line">
           <p class="about__text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
             numquam a expedita, sequi quisquam praesentium impedit. Quod nam
             omnis, error doloribus soluta mollitia dolorem reiciendis non sint
-            quaerat minima eius!
+            quaerat minima eius! Lorem ipsum dolor, sit amet consectetur
+            adipisicing elit. Ratione numquam a expedita, sequi quisquam
+            praesentium impedit. Quod nam omnis, error doloribus soluta mollitia
+            dolorem reiciendis non sint quaerat minima eius! Lorem ipsum dolor,
+            sit amet consectetur adipisicing elit. Ratione numquam a expedita,
+            sequi quisquam praesentium impedit. Quod nam omnis, error doloribus
+            soluta mollitia dolorem reiciendis non sint quaerat minima eius!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
+            numquam a expedita, sequi quisquam praesentium impedit. Quod nam
+            omnis, error doloribus soluta mollitia dolorem reiciendis non sint
+            quaerat minima eius! Lorem ipsum dolor, sit amet consectetur
+            adipisicing elit. Ratione numquam a expedita, sequi quisquam
+            praesentium impedit. Quod nam omnis, error doloribus soluta mollitia
+            dolorem reiciendis non sint quaerat minima eius! Lorem ipsum dolor,
+            sit amet consectetur adipisicing elit. Ratione numquam a expedita,
+            sequi quisquam praesentium impedit. Quod nam omnis, error doloribus
+            soluta mollitia dolorem reiciendis non sint quaerat minima eius!
           </p>
         </div>
       </main>
