Add about title and cv button

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -10,9 +10,9 @@
       rel="stylesheet"
     />
     <script
-    src="https://kit.fontawesome.com/d31a9c1094.js"
-    crossorigin="anonymous"
-  ></script>
+      src="https://kit.fontawesome.com/d31a9c1094.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
@@ -26,8 +26,13 @@
           alt="Foto de Natalia Migallón"
           class="about__photo"
         />
-        <h1 class="about__title">Sobre mí</h1>
+        <div class="about__title">
+          <h1 class="about__title--h1">Sobre mí</h1>
+          <span class="about__title--icon">( )</span>
+        </div>
         <div class="about__line">
+          <button type="button" class="about__cv">Descargar CV</button>
+          <!-- <h2 class="about__cv2">Descargar CV</h2> -->
           <p class="about__text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
             numquam a expedita, sequi quisquam praesentium impedit. Quod nam
