Change menu styles

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div class="page-about">
+    <div class="page-about background-hamb">
       <include src="./partials/header.html"></include>
       <main class="about">
         <img
