--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
-  <body class="">
+  <body>
     <div class="page-home">
       <include src="./partials/main.html"></include>
       <include src="./partials/footer.html"></include>
