--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -10,9 +10,9 @@
       rel="stylesheet"
     />
     <script
-    src="https://kit.fontawesome.com/d31a9c1094.js"
-    crossorigin="anonymous"
-  ></script>
+      src="https://kit.fontawesome.com/d31a9c1094.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
@@ -21,13 +21,77 @@
     <div class="page-projects">
       <include src="./partials/header.html"></include>
       <main class="projects">
-        <h1 class="projects__title">Proyectos</h1>
+        <div class="projects__title">
+          <h1 class="projects__title--h1">Proyectos</h1>
+          <span class="projects__title--icon">( )</span>
+        </div>
         <div class="projects__line">
           <p class="projects__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
-            numquam a expedita, sequi quisquam praesentium impedit. Quod nam
-            omnis, error doloribus soluta mollitia dolorem reiciendis non sint
-            quaerat minima eius!
+            Una muestra de los proyectos que he llevado acabo hasta ahora.
+          </p>
+          <img
+            src="./assets/images/projects-delicious.png"
+            alt=""
+            class="projects__image"
+          />
+          <h3 class="projects__tools">React.js | Express.js | SQLite</h3>
+          <p class="projects__text">
+            Refactorización a React.js de un código heredado en Vanilla
+            Javascript, y creación de un servidor propio.
+          </p>
+          <img
+            src="./assets/images/projects-rick-and-morty.png"
+            alt=""
+            class="projects__image"
+          />
+          <h3 class="projects__tools">React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <p class="projects__text">
+            Una muestra de los proyectos que he llevado acabo hasta ahora.
+          </p>
+          <img
+            src="./assets/images/projects-series-finder.png"
+            alt=""
+            class="projects__image"
+          />
+          <h3 class="projects__tools">Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <p class="projects__text">
+            Una muestra de los proyectos que he llevado acabo hasta ahora.
+          </p>
+          <img
+            src="./assets/images/projects-look-like-loop.png"
+            alt=""
+            class="projects__image"
+          />
+          <h3 class="projects__tools">Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <p class="projects__text">
+            Una muestra de los proyectos que he llevado acabo hasta ahora.
+          </p>
+          <img
+            src="./assets/images/projects-pokemon.png"
+            alt=""
+            class="projects__image"
+          />
+          <h3 class="projects__tools">React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <p class="projects__text">
+            Una muestra de los proyectos que he llevado acabo hasta ahora.
+          </p>
+          <img
+            src="./assets/images/projects-indemo.png"
+            alt=""
+            class="projects__image"
+          />
+          <h3 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <p class="projects__text">
+            Una muestra de los proyectos que he llevado acabo hasta ahora.
+          </p>
+          <img
+            src="./assets/images/projects-anonymus.png"
+            alt=""
+            class="projects__image"
+          />
+          <h3 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <p class="projects__text">
+            Una muestra de los proyectos que he llevado acabo hasta ahora.
           </p>
         </div>
       </main>
