Add projects styles

--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -34,65 +34,160 @@
             alt=""
             class="projects__image"
           />
-          <h3 class="projects__tools">React.js | Express.js | SQLite</h3>
+          <h3 class="projects__title-works">Delicious Profile Cards</h3>
+          <h4 class="projects__tools">React.js | Express.js | SQLite</h4>
           <p class="projects__text">
             Refactorización a React.js de un código heredado en Vanilla
             Javascript, y creación de un servidor propio.
           </p>
+          <button class="projects__btn-web">
+            <a
+              href="https://delicious-profile-card.herokuapp.com/#/"
+              target="_blank"
+              >Web</a
+            >
+          </button>
+          <button class="projects__btn-code">
+            <a
+              href="https://github.com/NataliaMigallon/delicious-profile-cards"
+              target="_blank"
+              >Código</a
+            >
+          </button>
           <img
             src="./assets/images/projects-rick-and-morty.png"
             alt=""
             class="projects__image"
           />
-          <h3 class="projects__tools">React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <h3 class="projects__title-works">Rick and Morty Character Finder</h3>
+          <h4 class="projects__tools">
+            React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS
+          </h4>
           <p class="projects__text">
             Una muestra de los proyectos que he llevado acabo hasta ahora.
           </p>
+          <button class="projects__btn-web">
+            <a
+              href="https://nataliamigallon.github.io/Rick-and-Morty-character-finder/#/"
+              target="_blank"
+              >Web</a
+            >
+          </button>
+          <button class="projects__btn-code">
+            <a href="https://github.com/NataliaMigallon/Rick-and-Morty-character-finder" target="_blank"
+              >Código</a
+            >
+          </button>
           <img
             src="./assets/images/projects-series-finder.png"
             alt=""
             class="projects__image"
           />
-          <h3 class="projects__tools">Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <h3 class="projects__title-works">Series Finder</h3>
+          <h4 class="projects__tools">
+            Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS
+          </h4>
           <p class="projects__text">
             Una muestra de los proyectos que he llevado acabo hasta ahora.
           </p>
+          <button class="projects__btn-web">
+            <a href="https://nataliamigallon.github.io/InDemo/" target="_blank"
+              >Web</a
+            >
+          </button>
+          <button class="projects__btn-code">
+            <a href="https://github.com/NataliaMigallon/InDemo" target="_blank"
+              >Código</a
+            >
+          </button>
           <img
             src="./assets/images/projects-look-like-loop.png"
             alt=""
             class="projects__image"
           />
-          <h3 class="projects__tools">Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <h3 class="projects__title-works">Look Like Loop Cards</h3>
+          <h4 class="projects__tools">
+            Vanilla Javascript | HTML5 | CSS3 (Flexbox, Grid) | SASS
+          </h4>
           <p class="projects__text">
             Una muestra de los proyectos que he llevado acabo hasta ahora.
           </p>
+          <button class="projects__btn-web">
+            <a href="https://nataliamigallon.github.io/InDemo/" target="_blank"
+              >Web</a
+            >
+          </button>
+          <button class="projects__btn-code">
+            <a href="https://github.com/NataliaMigallon/InDemo" target="_blank"
+              >Código</a
+            >
+          </button>
           <img
             src="./assets/images/projects-pokemon.png"
             alt=""
             class="projects__image"
           />
-          <h3 class="projects__tools">React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <h3 class="projects__title-works">Pokemon</h3>
+          <h4 class="projects__tools">
+            React.js | HTML5 | CSS3 (Flexbox, Grid) | SASS
+          </h4>
           <p class="projects__text">
             Una muestra de los proyectos que he llevado acabo hasta ahora.
           </p>
+          <button class="projects__btn-web">
+            <a href="https://nataliamigallon.github.io/InDemo/" target="_blank"
+              >Web</a
+            >
+          </button>
+          <button class="projects__btn-code">
+            <a href="https://github.com/NataliaMigallon/InDemo" target="_blank"
+              >Código</a
+            >
+          </button>
           <img
             src="./assets/images/projects-indemo.png"
             alt=""
             class="projects__image"
           />
-          <h3 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <h3 class="projects__title-works">#InDemo</h3>
+          <h4 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h4>
           <p class="projects__text">
             Una muestra de los proyectos que he llevado acabo hasta ahora.
           </p>
+          <button class="projects__btn-web">
+            <a href="https://nataliamigallon.github.io/InDemo/" target="_blank"
+              >Web</a
+            >
+          </button>
+          <button class="projects__btn-code">
+            <a href="https://github.com/NataliaMigallon/InDemo" target="_blank"
+              >Código</a
+            >
+          </button>
           <img
-            src="./assets/images/projects-anonymus.png"
+            src="./assets/images/projects-anonymous.png"
             alt=""
             class="projects__image"
           />
-          <h3 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h3>
+          <h3 class="projects__title-works">Anonymous Proxy</h3>
+          <h4 class="projects__tools">HTML5 | CSS3 (Flexbox, Grid) | SASS</h4>
           <p class="projects__text">
             Una muestra de los proyectos que he llevado acabo hasta ahora.
           </p>
+          <button class="projects__btn-web">
+            <a
+              href="https://nataliamigallon.github.io/Anonymous-Proxy/"
+              target="_blank"
+              >Web</a
+            >
+          </button>
+          <button class="projects__btn-code">
+            <a
+              href="https://github.com/NataliaMigallon/Anonymous-Proxy"
+              target="_blank"
+              >Código</a
+            >
+          </button>
         </div>
       </main>
       <include src="./partials/footer.html"></include>
