--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -21,6 +21,11 @@
     <div class="page-projects">
       <include src="./partials/header.html"></include>
       <main class="projects">
+        <img
+          src="./assets/images/Remman von Zwet.png"
+          alt="Poet Remman von Zwet"
+          class="projects__photo"
+        />
         <div class="projects__title">
           <h1 class="projects__title--h1">Proyectos</h1>
           <span class="projects__title--icon">( )</span>
