Fixed footer position

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -17,48 +17,45 @@
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
-  <body>
-    <div class="page-about">
-      <include src="./partials/header.html"></include>
-      <main class="about">
-        <img
-          src="./assets/images/nat-about.png"
-          alt="Foto de Natalia Migallón"
-          class="about__photo"
-        />
-        <div class="about__title">
-          <h1 class="about__title--h1">Sobre mí</h1>
-          <span class="about__title--icon">( )</span>
-        </div>
-        <div class="about__line">
-          <button type="button" class="about__cv">Descargar CV</button>
-          <!-- <h2 class="about__cv2">Descargar CV</h2> -->
-          <p class="about__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
-            numquam a expedita, sequi quisquam praesentium impedit. Quod nam
-            omnis, error doloribus soluta mollitia dolorem reiciendis non sint
-            quaerat minima eius! Lorem ipsum dolor, sit amet consectetur
-            adipisicing elit. Ratione numquam a expedita, sequi quisquam
-            praesentium impedit. Quod nam omnis, error doloribus soluta mollitia
-            dolorem reiciendis non sint quaerat minima eius! Lorem ipsum dolor,
-            sit amet consectetur adipisicing elit. Ratione numquam a expedita,
-            sequi quisquam praesentium impedit. Quod nam omnis, error doloribus
-            soluta mollitia dolorem reiciendis non sint quaerat minima eius!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
-            numquam a expedita, sequi quisquam praesentium impedit. Quod nam
-            omnis, error doloribus soluta mollitia dolorem reiciendis non sint
-            quaerat minima eius! Lorem ipsum dolor, sit amet consectetur
-            adipisicing elit. Ratione numquam a expedita, sequi quisquam
-            praesentium impedit. Quod nam omnis, error doloribus soluta mollitia
-            dolorem reiciendis non sint quaerat minima eius! Lorem ipsum dolor,
-            sit amet consectetur adipisicing elit. Ratione numquam a expedita,
-            sequi quisquam praesentium impedit. Quod nam omnis, error doloribus
-            soluta mollitia dolorem reiciendis non sint quaerat minima eius!
-          </p>
-        </div>
-      </main>
-      <include src="./partials/footer.html"></include>
-    </div>
+  <body class="page-about">
+    <include src="./partials/header.html"></include>
+    <main class="about">
+      <!-- <img
+        src="./assets/images/nat-about.png"
+        alt="Foto de Natalia Migallón"
+        class="about__photo"
+      /> -->
+      <div class="about__title">
+        <h1 class="about__title--h1">Sobre mí</h1>
+        <span class="about__title--icon">( )</span>
+      </div>
+      <!-- <div class="about__line"> -->
+      <button type="button" class="about__cv">Descargar CV</button>
+      <!-- <h2 class="about__cv2">Descargar CV</h2> -->
+      <p class="about__text">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione
+        numquam a expedita, sequi quisquam praesentium impedit. Quod nam omnis,
+        error doloribus soluta mollitia dolorem reiciendis non sint quaerat
+        minima eius! Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Ratione numquam a expedita, sequi quisquam praesentium impedit. Quod nam
+        omnis, error doloribus soluta mollitia dolorem reiciendis non sint
+        quaerat minima eius! Lorem ipsum dolor, sit amet consectetur adipisicing
+        elit. Ratione numquam a expedita, sequi quisquam praesentium impedit.
+        Quod nam omnis, error doloribus soluta mollitia dolorem reiciendis non
+        sint quaerat minima eius! Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Ratione numquam a expedita, sequi quisquam praesentium
+        impedit. Quod nam omnis, error doloribus soluta mollitia dolorem
+        reiciendis non sint quaerat minima eius! Lorem ipsum dolor, sit amet
+        consectetur adipisicing elit. Ratione numquam a expedita, sequi quisquam
+        praesentium impedit. Quod nam omnis, error doloribus soluta mollitia
+        dolorem reiciendis non sint quaerat minima eius! Lorem ipsum dolor, sit
+        amet consectetur adipisicing elit. Ratione numquam a expedita, sequi
+        quisquam praesentium impedit. Quod nam omnis, error doloribus soluta
+        mollitia dolorem reiciendis non sint quaerat minima eius!
+      </p>
+      <!-- </div> -->
+    </main>
+    <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
