Add menu hambuger background and footer without icons

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -89,6 +89,7 @@
         <input type="submit" value="Enviar" class="contact__btn" />
       </form>
     </main>
+    <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
