Fixed mouth animation and margin-top title for all pages

--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -17,20 +17,23 @@
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
-  <body>
-    <div class="page-projects">
+  <body class="page-projects">
       <include src="./partials/header.html"></include>
       <main class="projects">
-        <img
+        <!-- <img
           src="./assets/images/Remman von Zwet.png"
           alt="Poet Remman von Zwet"
           class="projects__photo"
-        />
+        /> -->
         <div class="projects__title">
           <h1 class="projects__title--h1">Proyectos</h1>
           <span class="projects__title--icon">( )</span>
         </div>
-        <div class="projects__line">
+        <!-- <div class="projects__title">
+          <h1 class="projects__title--h1">Proyectos</h1>
+          <span class="projects__title--icon">( )</span>
+        </div>
+        <div class="projects__line"> -->
           <!-- <p class="projects__text">
             En esta sección comparto los proyectos que he llevado a cabo en 2021.
           </p> -->
@@ -253,7 +256,6 @@
         </div>
       </main>
       <include src="./partials/footer.html"></include>
-    </div>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
